# bolt-it

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  COMMERCIAL_PLAN.md  Makefile  PROJECT_STATE.md  README.md  alembic.ini  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml  spec.md  vercel.json
convex/: README.md  schema.ts
migrations/: env.py  m10_nia_sources.sql  m5_workspaces.sql  m6_demo_ttl.sql  m7_lockdown_anon.sql  m8_slack_columns.sql  m9_agent_jobs.sql
migrations/versions/: 0001_initial.py
scripts/: demo.sh  local-agent.mjs  reindex_runbooks.py  seed_db.py
seed/: runbooks.yaml  users.yaml
src/: middleware.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/actions/: auth.ts  logs.ts  sources.ts  tickets.ts
src/app/app/: page.tsx
src/app/components/: ActiveTicket.tsx  AgentStatusBadge.tsx  AppShell.tsx  ConnectDocsCard.tsx  Console.tsx  DeflectionDashboard.tsx  DemoArcButton.tsx  HowItWorks.tsx  KnowledgeSidebar.tsx  LogAnalyzer.tsx  RunbooksTab.tsx  SaveProgressBanner.tsx  SlackChat.tsx  SlackConnectCard.tsx  StateProvider.tsx  TicketQueue.tsx
src/app/demo/: page.tsx
src/app/login/: page.tsx
src/it_copilot/: __init__.py  audit.py  config.py  idempotency.py  main.py
src/lib/: agent-heartbeat.ts  agent-jobs.ts  auth.ts  data.ts  db.ts  insforge-client.ts  password.ts  policy.ts  seed.ts  slack.ts  types.ts  workspace.ts
tests/: conftest.py
tests/evals/: golden_tickets.yaml  run_evals.py
tests/integration/: test_full_graph.py
tests/unit/: test_policy.py  test_prompt_injection.py  test_schemas.py
(+64 files in other folders)
