[project]
name = "it-copilot"
version = "0.1.0"
description = "IT Support Copilot — LangGraph + RAG agent with hard approval gate, capability-scoped tools, and DB-enforced audit"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sse-starlette>=2.1",
    "pydantic[email]>=2.9",
    "pydantic-settings>=2.6",
    "langchain>=0.3",
    "langchain-core>=0.3",
    "langchain-openai>=0.2",
    "langchain-community>=0.3",
    "langchain-postgres>=0.0.12",
    "langchain-text-splitters>=0.3",
    "langgraph>=0.2.50",
    "langgraph-checkpoint-postgres>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "psycopg[binary,pool]>=3.2",
    "pgvector>=0.3",
    "alembic>=1.14",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "structlog>=24.4",
    "rank-bm25>=0.2.2",
    "python-dotenv>=1.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "ruff>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/it_copilot"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
